<resources>
    <string name="app_name">ADVSP</string>
    <string name="ble_name">Prietaiso vardas</string>
    <string name="advsp">VGTU EF 2018</string>
    <string name="btn_scan">IEŠKOTI</string>
    <string name="mediabutton">PLAY</string>
    <string name="enabling_bluetooth">Pradedama</string>
    <string name="connecting">Jungiamasi</string>
    <string name="connected">Prisijungta</string>
    <string name="disconnecting">Atsijungiama</string>
    <string name="not_connected">Neprisijungta</string>
    <string name="scan_for_devices">Scan for Devices</string>
    <string name="text_to_send">Text to send</string>
    <string name="unknown">Nežinomas</string>
    <string name="no_devices_found">No devices found</string>
    <string name="list_view">List</string>
    <string name="get_rssi">Founded RSSI</string>
    <string name="rssi_begin">Ieškomas prietaisas..</string>
    <string name="location_house">Saugoma vieta - namai</string>
    <string name="location_outside">Saugoma vieta - laukas</string>
    <string name="silent_hours">Begarsis režimas</string>
    <string name="findDevice">Rasti\nADVSP</string>
    <string name="lostCounter">Iš viso ADVSP dingo kartų: 0</string>
    <string name="rangeSetText">Atstumo nustatymas - nuo 1 iki 10 metrų</string>
    <string name="bateryLevel">Baterijos\nlygis</string>
    <string name="calibration">Vartotojo\nKalibracija</string>
    <string name="calibration_title">Rankinis\nkalibravimas</string>
    <string name="getCalibration">NUSTATYTI</string>
    <string name="MeterOne">Paspauskite nustatyti, kai būsite nutolęs 1 metrą</string>
    <string name="MeterTwo">Paspauskite nustatyti, kai būsite nutolęs 2 metrus</string>
    <string name="MeterThree">Paspauskite nustatyti, kai būsite nutolęs 3 metrus</string>
    <string name="description">ADVSP turi standartinį atstumo kalibravimą.\nSiekiant tiklesnių matavimų galima, prie\nskirtingo atstumo, nustatyti signalo lygį.\nPradėti matuoti nuo 1 metro</string>
    <string name="reset">RESET</string>
</resources>
